--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Node Capstone: A Web Tool For Parents",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "faker": "^4.1.0",
+    "mongoose": "^5.1.1",
+    "morgan": "^1.9.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit"
   },
   "repository": {
     "type": "git",
