--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mocha": "^5.2.0"
   },
   "scripts": {
-    "test": "mocha --exit"
+    "start": "node server.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
