--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "mongoose": "^5.1.1",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "npm": "^6.0.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
