--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "mime": "^2.3.1",
     "mongoose": "^5.1.1",
     "morgan": "^1.9.0",
-    "npm": "^6.0.1"
+    "npm": "^6.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -17,7 +18,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "test": "mocha"
+    "test": "mocha --exit"
   },
   "repository": {
     "type": "git",
