--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mime": "^2.3.1",
     "mongoose": "^5.1.1",
     "morgan": "^1.9.0",
+    "nodemon": "^1.17.5",
     "npm": "^6.1.0"
   },
   "devDependencies": {
