--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "mime": "^2.3.1",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
