--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "Node Capstone: A Web Tool For Parents",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "jsonwebtoken": "^8.3.0",
     "mime": "^2.3.1",
     "moment": "^2.22.2",
     "mongoose": "^5.1.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "nodemon": "^1.17.5",
-    "npm": "^6.1.0"
+    "npm": "^6.1.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
