--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-JWT_SECRET=Follow_the_Child
+JWT_SECRET='SECRET_OF_CHILDHOOD'
 DATABASE_URL='mongodb://devUser:thinkful925@ds163480.mlab.com:63480/juskidindev'
