--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "a11y-dialog": "^5.1.2",
+    "aws-sdk": "^2.382.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -15,8 +16,9 @@
     "mongoose": "^5.1.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "multer-s3": "^2.9.0",
     "nodemon": "^1.17.5",
-    "npm": "^6.1.0",
+    "npm": "^6.5.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
