--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "mocha": "^5.2.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
-    // "test": "mocha --exit"
+    "start": "nodemon server.js",
+    "test": "mocha --exit"
   },
   "repository": {
     "type": "git",
