--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "a11y-dialog": "^5.1.2",
     "aws-sdk": "^2.384.0",
     "bcryptjs": "^2.4.3",
+    "blueimp-file-upload": "^9.28.0",
+    "cloudinary": "^1.13.2",
+    "cloudinary-jquery-file-upload": "^2.5.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
     "mime": "^2.3.1",
     "moment": "^2.22.2",
@@ -17,6 +21,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.3.0",
     "multer-s3": "^2.9.0",
+    "multer-storage-cloudinary": "^2.2.1",
     "nodemon": "^1.17.5",
     "npm": "^6.5.0",
     "passport": "^0.4.0",
